Add cover letter

--- a/webdev.tex
+++ b/webdev.tex
@@ -21,58 +21,59 @@
  
 \section{OBJECTIVE}  A position as a junior ruby on rails developer. 
  
-
-\section{EDUCATION} {\sl Bachelor of Science,} Mechanical Engineering \\
-  Cumulative GPA: 2.75 \\
+\section{EDUCATION} {\sl Bachelor of Science,} Mechanical Engineering, GPA: 2.75 \\
   University of Arizona, Tucson, AZ, May 2013 \\
  
- 
-\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML, CSS, Javascript, Python, Ruby, Matlab, {\sl Operating Systems:} Unix. 
+\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML, CSS, Javascript, Python, Ruby, Matlab, {\sl Operating Systems:} Unix/Mac OSX. 
  
 \section{PROJECTS} 
-  % {\sl Rails Tutorial by Michael Hartl} \hfill December 2014 \\
-  % \begin{itemize}
+  {\sl Rails Tutorial by Michael Hartl} \hfill December 2014 \\
+  https://grisly-mausoleum-5660.herokuapp.com/
+  \begin{itemize}
   %     \item Basics of version control with git
-  %     \item Deployment with Heroku
   %     \item Testing with MiniTest, Backtrace silencer, Guard
   %     \item Basic Ruby Data Structures including arrays, ranges, hashes, symbols, and blocks
   %     \item SASS asset pipeline and Bootstrap for the front end
   %     \item TDD for User model, log in/out, sign ups, account activation, relationship model and status feed
-      % \item TDD of a basic User Model updating, showing and deleting users, and Log in/out
+      \item TDD of a basic User Model updating, showing and deleting users, and Log in/out
+      \item Deployment with Heroku
       % \item TDD for Sign Up form
       % \item TDD for Account Activation
       % \item TDD for Relationship model for following feature and status feed
       % \item Finished app at: https://grisly-mausoleum-5660.herokuapp.com/
-  % \end{itemize} 
+  \end{itemize} 
 
   {\sl Auto Title Loans Website} \hfill May 2014 \\
+  besttitleloanstucson.com
   \begin{itemize}
       % \item Bootstrap front end
       % \item Javascript validation using regex
       % \item HTML/CSS Form reflecting automotive characteristics submitted via PHP
       \item Bootstrap front end, javascript regex validation, HTML/CSS/PHP
-      \item Site at: besttitleloanstucson.com
+      % \item Site at: besttitleloanstucson.com
   \end{itemize} 
 
   {\sl HomeWatch AZ Website} \hfill October 2014 \\
+  development.homewatch.divshot.io
   \begin{itemize}
       % \item Jade, jQuery, Stylus
-      % \item Deployment with Divshot
       % \item Static site compiled with roots.cx 
       % \item Smooth scrollr integration
       % \item Responsive Design
       \item Static site with responsive design written in Jade, jQuery, Stylus
-      \item Site at: development.homewatch.divshot.io
+      % \item Deployment with Divshot
+      % \item Site at: development.homewatch.divshot.io
   \end{itemize} 
 
   {\sl Jacobson Studios Website} \hfill January 2015 - current \\
+  jacobsonstudios.com
   \begin{itemize}
       % \item Python Django framework with Mezzanine CMS
       % \item Automated Deployment with Fabric
-      % \item Customized Bootswatch Less Front End
+      \item Customized Bootswatch Less Front End
       % \item Deployment with Digital Ocean
       \item Python Django framework with Mezzanine CMS
-      \item Site at: jacobsonstudios.com
+      % \item Site at: jacobsonstudios.com
   \end{itemize} 
 
   %{\sl Budding News Group Website} \hfill December 2015 - current \\
@@ -85,6 +86,7 @@
   %\end{itemize} 
 
   {\sl The Odin Project} \hfill March 2014 - current \\
+  trodrigu.github.io
   \begin{itemize}
       % \item Droid Logo in HTML/CSS
       % \item Google Search page using Jade/Stylus in roots static site compiler
@@ -95,7 +97,7 @@
       % \item Sum of the even numbered values in the Fibonacci sequence up to 4E6 solved by Ruby and Javascript
       % \item Largest prime factor of 600851475143 Fermat's factorization method solved by Ruby and Javascript
       \item Repository of projects including Google Search HTML/CSS, TDD with rSpec, jQuery, and the first three problems of Project Euler
-      \item Site at: trodrigu.github.io
+      % \item Site at: trodrigu.github.io
   \end{itemize} 
 
 \section{EXPERIENCE} 
@@ -103,14 +105,15 @@
   {\sl Web Content/Social Media Manager} \hfill August 2014 \\
   Azmira Holistic Animal Care
   \begin{itemize}
-      \item Increased Google Adwords CTR from ~1\% to above 3\%
+      \item Increased Google Adwords Click Through Rate in 2 months from ~1\% to consistently between 2\% and 3\%
+      % \item Created Bark Buck coupon using Photoshop
+      % \item Restored newspaper clipping from 1986 using Photoshop
       \item Created Bark Buck coupon using Photoshop
-      \item Restored newspaper clipping from 1986 using Photoshop
-      \item Revamped hacshoppes.com website front end for better readability
-      \item Utilized Bootstrap template to make carefreepet.com eCommerce website responsive
+      % \item Revamped hacshoppes.com website front end for better readability
+      \item Bootstrap to make carefreepet.com eCommerce responsive
       \item Maintained and updated web content specific to retail brick and mortar stores
       \item Updated social networks regularly with Hootsuite application
-      \item Employee of the year 2014
+      \item Awarded Employee of the year 2014 after demonstrating exemplary customer service for 5 months
   \end{itemize}
 
   % {\sl Sales Associate} \hfill August 2014 \\
