Write up cover letter for Nextiva

--- a/cover_let.tex
+++ b/cover_let.tex
@@ -15,10 +15,10 @@
 \let\raggedleft\raggedright                % needed to get date flush left
  
  
-\begin{letter}{Daniel James \\
-Lead Engineer \\
-Combatant Gentlemen \\
-Irvine, CA}
+\begin{letter}{
+Hiring Manager \\
+Nextiva \\
+Scottsdale, AZ}
 
 \begin{center}
 {\large\bf Thomas M. Rodriguez}
@@ -29,14 +29,14 @@ Irvine, CA}
 \end{center} \vfill % forces letterhead to top of page
  
  
-\opening{Dear Mr. James:} 
+\opening{Dear Hiring Manager:}
  
 % \noindent PARAGRAPH ONE: State reason for letter, name the position or type 
 % of work you are applying for and identify source from  which  you 
 % learned   of   the  opening.  (i.e.  Career  Development  Center, 
 % newspaper, employment service, personal contact). 
 
-\noindent I am writing this letter to get a chance to interview for the position of Junior Software Engineer.  I learned of the opening after perusing the Stack Careers page.
+\noindent I am writing this letter for a chance to interview for the position of Front End Developer.
  
 % \noindent PARAGRAPH  TWO:  Indicate why you are interested in the position, 
 % the company, its products, services - above all, stress what  you 
@@ -50,7 +50,7 @@ Irvine, CA}
 % this section is to strengthen your resume  by  providing  details 
 % which bring your experiences to life. 
 
-\noindent I am interested in the position because I identify with the concern for ultimate quality and see to it that our peers, loved ones and customers receive what they deserve.  I understand that my experience lies a little short at 1 years of software developing experience, but the assortment of projects I have completed as a Freelance Developer and as a lover of programming (Test Driven of course) have allowed me to understand the necessities of git, TDD with rSpec, a great starting point (Rails and Django), and of course the open source community.  I have deployed 6 different sites to the world wide web each demonstrating my understanding of a good user interface as well as a good user experience.  Currently I am a Web Content/Social Media Manager for a small business, Azmira Holistic Animal Care, and I have carried out my quest for ultimate quality by ensuring a better return of investment for the business' 3 websites and their Google Adwords campaigns.  I am confident that I will bring value to your company.
+\noindent I have experience with Postgresql after using it with most of my Backend projects.  I also completed Stanford's Relational Algebra Course giving me a better understanding of Structured Query Language.  I have written several ruby scripts to accomplish tasks ranging from web scraping, calculating the Fibonacci sequence to many places, as well as utilizing Fermat's factorization method to factor large integers.  I have built several server side projects using Ruby on Rails including a twitter clone, and Django, building a basic eCommerce site as well as a portfolio site utilizing Mezzanine CMS.  I have a strong understanding of the Javascript language building a jQuery Etch-a-Sketch, and using it to calculate the Fibonacci sequence to many places as well as implementing Fermat's factorization method.  I prefer to use coffeescript and it fits in my Static Site Development stack when I write jQuery.  I am well aware of the power of modern HTML5/CSS3 and have used gradients, border-radius', and other convenient additions to keep my sites current.  I opt to use git as much as possible and I have even pushed up this cover letter as a tex file and PDF (now viewable on github) to my repository at https://github.com/trodrigu/resume/blob/master/cover\_let.pdf.  I have used Application Programming Interfaces for an assortment of things including using Google's Calendar API to aid in the scheduling of Google Ads with javascript or using Stripe's API for payment processing in my Django project.
  
 % \noindent PARAGRAPH THREE: Request a personal interview and  indicate  your 
 % flexibility as to the time and place. Repeat your phone number in 
@@ -61,7 +61,7 @@ Irvine, CA}
 % interview. End the letter by thanking  the  employer  for  taking 
 % time to consider your credentials. 
 
-\noindent At the moment I am working full time, however, I am capable of scheduling an interview within a weeks notice because of the ability to work from home.  My phone number is (619)-248-0717 and I plan on being in San Diego on March 5th for the San Diego Ruby Meetup which means an interview between March 5th and 8th would be fantastic.  Thank you for taking the time to consider my credentials.
+\noindent At the moment I am working full time, however, I am capable of scheduling an interview within a weeks notice because of the ability to work from home.  My phone number is (619)-248-0717.  Thank you for taking the time to consider my credentials.
  
 \closing{Sincerely yours,} 
  
