--- a/cover_let_me.tex
+++ b/cover_let_me.tex
@@ -16,8 +16,8 @@
  
  
 \begin{letter}{Recruiter \\
-TE Connectivity \\
-Oceanside, CA}
+Flatiron \\
+San Diego, CA}
 
 \begin{center}
 {\large\bf Thomas M. Rodriguez}
@@ -35,7 +35,7 @@ Oceanside, CA}
 % learned   of   the  opening.  (i.e.  Career  Development  Center, 
 % newspaper, employment service, personal contact). 
 
-\noindent I am writing this letter to get a chance to interview for the position of Manufacturing Engineer I.  I learned of the opening after seeing it on the TE careers page.
+\noindent I am writing this letter to get a chance to interview for the position of Field Engineer.  I learned of the opening after seeing it on the University of Arizona careers page.
  
 % \noindent PARAGRAPH  TWO:  Indicate why you are interested in the position, 
 % the company, its products, services - above all, stress what  you 
@@ -49,7 +49,7 @@ Oceanside, CA}
 % this section is to strengthen your resume  by  providing  details 
 % which bring your experiences to life. 
 
-\noindent I am interested in the position of Manufacturing Engineer because I want to join the ranks of a Thomson Reuters Top 100 Global Innovator.  In this day and age where every one is dependent on a network, proper connectivity is paramount at ensuring business is done in the most efficient manner.  Coming from a Mechanical Engineering background, I am able to understand that life is full of irreversibility and it is up us to minimize it.  Knowledge of stress/strain, cycles to failure, the laws of thermodynamics, and basic cost/benefit analysis have helped me to understand the world.  I would ensure that wherever applicable this learning is applied in the Manufacturing Engineering role.
+\noindent I am confident I can be a successful Field Engineer at Flatiron.  I have considerable experience in designing components in SolidWorks, testing in a Lab setting with LabView, machining metal via manual mill, lathe and CNC, and applying controls theory to optimize systems.  I also have experience with HVAC design utilizing ASHRAE Peak Loads, zones and building materials.
 % \noindent PARAGRAPH THREE: Request a personal interview and  indicate  your 
 % flexibility as to the time and place. Repeat your phone number in 
 % the letter and offer assistance to help in a speedy response. For 
