--- a/cover_let.tex
+++ b/cover_let.tex
@@ -16,8 +16,9 @@
  
  
 \begin{letter}{
-Hiring Manager \\
-Nextiva \\
+SoftPoint \\
+Ms. Elizabeth Villar \\
+HR Manager \\
 Scottsdale, AZ}
 
 \begin{center}
@@ -29,14 +30,14 @@ Scottsdale, AZ}
 \end{center} \vfill % forces letterhead to top of page
  
  
-\opening{Dear Hiring Manager:}
+\opening{Dear Ms. Villar,}
  
 % \noindent PARAGRAPH ONE: State reason for letter, name the position or type 
 % of work you are applying for and identify source from  which  you 
 % learned   of   the  opening.  (i.e.  Career  Development  Center, 
 % newspaper, employment service, personal contact). 
 
-\noindent I am writing this letter for a chance to interview for the position of Front End Developer.
+\noindent I am writing this letter for a chance to interview for the position of part time Web Developer.
  
 % \noindent PARAGRAPH  TWO:  Indicate why you are interested in the position, 
 % the company, its products, services - above all, stress what  you 
