--- a/webdev.tex
+++ b/webdev.tex
@@ -19,7 +19,7 @@
 
 \begin{resume}
  
-\section{OBJECTIVE}  A position as a junior front end developer. 
+\section{OBJECTIVE}  A position as a junior web developer. 
  
 \section{EDUCATION} {\sl Bachelor of Science,} Mechanical Engineering, GPA: 2.75 \\
   University of Arizona, Tucson, AZ, May 2013 \\
