delete from webdev resume

--- a/webdev/webdev.tex
+++ b/webdev/webdev.tex
@@ -24,7 +24,7 @@
 \section{EDUCATION} {\sl Bachelor of Science,} Mechanical Engineering, GPA: 2.75 \\
   University of Arizona, Tucson, AZ, May 2013 \\
  
-\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML, CSS, Javascript, Python, Ruby, Matlab, {\sl Operating Systems:} Unix/Mac OSX. 
+\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML, CSS, Javascript, Python, Ruby, Matlab, Photoshop, Sketch {\sl Operating Systems:} Unix/Mac OSX. 
  
 \section{PROJECTS} 
   {\sl Rails Tutorial by Michael Hartl} \hfill December 2014 \\
@@ -41,16 +41,6 @@
       % \item TDD for Account Activation
       % \item TDD for Relationship model for following feature and status feed
       % \item Finished app at: https://grisly-mausoleum-5660.herokuapp.com/
-  \end{itemize} 
-
-  {\sl Auto Title Loans Website} \hfill May 2014 \\
-  besttitleloanstucson.com
-  \begin{itemize}
-      % \item Bootstrap front end
-      % \item Javascript validation using regex
-      % \item HTML/CSS Form reflecting automotive characteristics submitted via PHP
-      \item Bootstrap front end, javascript regex validation, HTML/CSS/PHP
-      % \item Site at: besttitleloanstucson.com
   \end{itemize} 
 
   {\sl HomeWatch AZ Website} \hfill October 2014 \\
