--- a/webdev/webdev.copy.tex
+++ b/webdev/webdev.copy.tex
@@ -24,59 +24,69 @@
 \section{EDUCATION} {\sl Bachelor of Science,} Mechanical Engineering, GPA: 2.75 \\
   University of Arizona, Tucson, AZ, May 2013 \\
  
-\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML5, CSS3, Javascript, Ruby, Python, Matlab, Photoshop, Sketch {\sl Operating Systems:} Unix/Mac OSX. 
+\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML, CSS, Javascript, Python, Ruby, Matlab, Photoshop, Sketch {\sl Operating Systems:} Unix/Mac OSX. 
  
-\section{PROJECTS} \hfill October 2014 - present \\
-  {\sl Adventure Game} \\
-  github.com/trodrigu/adventure\_game
+\section{PROJECTS} 
+  {\sl Rails Tutorial by Michael Hartl} \hfill December 2014 \\
+  https://grisly-mausoleum-5660.herokuapp.com/
   \begin{itemize}
-      \item Finite state game designed with lessons to help a user learn ruby
-      \item TDD to build map and engine 
-  \end{itemize}
+  %     \item Basics of version control with git
+  %     \item Testing with MiniTest, Backtrace silencer, Guard
+  %     \item Basic Ruby Data Structures including arrays, ranges, hashes, symbols, and blocks
+  %     \item SASS asset pipeline and Bootstrap for the front end
+  %     \item TDD for User model, log in/out, sign ups, account activation, relationship model and status feed
+      \item TDD of a basic User Model updating, showing and deleting users, and Log in/out
+      \item Deployment with Heroku
+      % \item TDD for Sign Up form
+      % \item TDD for Account Activation
+      % \item TDD for Relationship model for following feature and status feed
+      % \item Finished app at: https://grisly-mausoleum-5660.herokuapp.com/
+  \end{itemize} 
 
-  {\sl Wild Life Tracker} \\
-  github.com/trodrigu/wild\_life\_tracker
+  {\sl HomeWatch AZ Website} \hfill October 2014 \\
+  development.homewatch.divshot.io
   \begin{itemize}
-      \item Rails app that tracks, stores and geolocates species
-      \item Packery, a bin packing algorithm for the grid
-  \end{itemize}
-
-  {\sl Code Blog} \\
-  tommyr.me
-  \begin{itemize}
-      \item Static site with front end responsive design written in Jade, jQuery, Stylus
-      \item Deployed on netlify with CDN to ensure fast load times
-  \end{itemize}
-  %{\sl HomeWatch AZ Website} 
-  %development.homewatch.divshot.io
-  %\begin{itemize}
       % \item Jade, jQuery, Stylus
       % \item Static site compiled with roots.cx 
       % \item Smooth scrollr integration
       % \item Responsive Design
-      %\item Static site with responsive design written in Jade, jQuery, Stylus
+      \item Static site with responsive design written in Jade, jQuery, Stylus
       % \item Deployment with Divshot
       % \item Site at: development.homewatch.divshot.io
+  \end{itemize} 
+
+  {\sl Jacobson Studios Website} \hfill January 2015 - current \\
+  jacobsonstudios.com
+  \begin{itemize}
+      % \item Python Django framework with Mezzanine CMS
+      % \item Automated Deployment with Fabric
+      \item Customized Bootswatch Less Front End
+      % \item Deployment with Digital Ocean
+      \item Python Django framework with Mezzanine CMS
+      % \item Site at: jacobsonstudios.com
+  \end{itemize} 
+
+  %{\sl Budding News Group Website} \hfill December 2015 - current \\
+  %\begin{itemize}
+      %\item Python Django framework with Mezzanine CMS
+      %\item Automated Deployment with Fabric
+      %\item Customized Bootstrap Sass Front End
+      %\item Deployment with Digital Ocean
+      %\item Site at: bdng.co
   %\end{itemize} 
 
-  {\sl Project Euler} \\
-  github.com/trodrigu/projecteuler
-  \begin{itemize}
-    \item solved 1-11 and found greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in a 20 by 20 grid
-  \end{itemize}
-
-  {\sl The Odin Project} \\
-  github.com/trodrigu/odinproject 
+  {\sl The Odin Project} \hfill March 2014 - current \\
+  trodrigu.github.io
   \begin{itemize}
       % \item Droid Logo in HTML/CSS
       % \item Google Search page using Jade/Stylus in roots static site compiler
-       \item Etch-a-sketch with jquery producing randomized colors on hover
+      % \item Etch-a-sketch with jquery producing randomized colors on hover
       % \item jQuery Slider with hover, next and previous functionality
-       \item TDD with rspec to make Temp Converter, Calculator, Simon Says, Book Title Corrector, and Timer String Display
+      % \item TDD with rspec to make Temp Converter, Calculator, Simon Says, Book Title Corrector, and Timer String Display
       % \item Sum of all multiples of 3 or 5 under 1000 solved by Ruby and Javascript
       % \item Sum of the even numbered values in the Fibonacci sequence up to 4E6 solved by Ruby and Javascript
       % \item Largest prime factor of 600851475143 Fermat's factorization method solved by Ruby and Javascript
-      %\item Repository of projects including Google Search HTML/CSS, TDD with rSpec, jQuery, and the first three problems of Project Euler
+      \item Repository of projects including Google Search HTML/CSS, TDD with rSpec, jQuery, and the first three problems of Project Euler
       % \item Site at: trodrigu.github.io
   \end{itemize} 
 
@@ -88,9 +98,11 @@
       \item Increased Google Adwords Click Through Rate in 2 months from ~1\% to consistently between 2\% and 3\%
       % \item Created Bark Buck coupon using Photoshop
       % \item Restored newspaper clipping from 1986 using Photoshop
+      \item Created Bark Buck coupon using Photoshop
       % \item Revamped hacshoppes.com website front end for better readability
       \item Bootstrap to make carefreepet.com eCommerce responsive
       \item Maintained and updated web content specific to retail brick and mortar stores
+      \item Updated social networks regularly with Hootsuite application
       \item Awarded Employee of the year 2014 after demonstrating exemplary customer service for 5 months
   \end{itemize}
 
