--- a/webdev/webdev.tex
+++ b/webdev/webdev.tex
@@ -21,27 +21,30 @@
  
 \section{OBJECTIVE}  A position as a Full Time web developer. 
  
-\section{EDUCATION} {\sl Bachelor of Science,} Mechanical Engineering, GPA: 2.75 \\
+\section{EDUCATION} 
+  {\sl Learn SD,} Web Development Bootcamp \\
+  May - August 2015 \\\\
+  {\sl Bachelor of Science,} Mechanical Engineering, GPA: 2.75 \\
   University of Arizona, Tucson, AZ, May 2013 \\
  
-\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML5, CSS3, Javascript, Ruby, Python, Matlab, Photoshop, Sketch {\sl Operating Systems:} Unix/Mac OSX. 
+\section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML5, CSS3, Javascript, Ruby, Postgres, MongoDB, Python, Matlab, Photoshop, Sketch {\sl Operating Systems:} Unix/Mac OSX. 
  
 \section{PROJECTS} \hfill October 2014 - present \\
-  {\sl Adventure Game} \\
+  {\sl Adventure Game}|
   github.com/trodrigu/adventure\_game
   \begin{itemize}
       \item Finite state game designed with lessons to help a user learn ruby
       \item TDD to build map and engine 
   \end{itemize}
 
-  {\sl Wild Life Tracker} \\
+  {\sl Wild Life Tracker}| 
   github.com/trodrigu/wild\_life\_tracker
   \begin{itemize}
       \item Rails app that tracks, stores and geolocates species
       \item Packery, a bin packing algorithm for the grid
   \end{itemize}
 
-  {\sl Code Blog} \\
+  {\sl Code Blog}| 
   tommyr.me
   \begin{itemize}
       \item Static site with front end responsive design written in Jade, jQuery, Stylus
@@ -59,13 +62,13 @@
       % \item Site at: development.homewatch.divshot.io
   %\end{itemize} 
 
-  {\sl Project Euler} \\
+  {\sl Project Euler}|
   github.com/trodrigu/projecteuler
   \begin{itemize}
     \item solved 1-11 and found greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in a 20 by 20 grid
   \end{itemize}
 
-  {\sl The Odin Project} \\
+  {\sl The Odin Project}|
   github.com/trodrigu/odinproject 
   \begin{itemize}
       % \item Droid Logo in HTML/CSS
@@ -85,15 +88,16 @@
   {\sl Web Content/Social Media Manager} \hfill August 2014 \\
   Azmira Holistic Animal Care
   \begin{itemize}
-      \item Increased Google Adwords Click Through Rate in 2 months from ~1\% to consistently between 2\% and 3\%
+      \item Increased Google Adwords Click Through Rate in 2 months from ~1\% to above 2\% and redesigned carefreepet.com eCommerce site in bootstrap
       % \item Created Bark Buck coupon using Photoshop
       % \item Restored newspaper clipping from 1986 using Photoshop
       % \item Revamped hacshoppes.com website front end for better readability
-      \item Bootstrap to make carefreepet.com eCommerce responsive
-      \item Maintained and updated web content specific to retail brick and mortar stores
-      \item Awarded Employee of the year 2014 after demonstrating exemplary customer service for 5 months
   \end{itemize}
-
+  {\sl Graduate of MongoDB for Node.js Developers} \hfill May - July 2015 \\
+  MongoDB Inc.
+  \begin{itemize}
+      \item 7 week course involving MongoDB and CRUD, Schema Design, performance, the aggregation framework, and application engineering
+  \end{itemize}
   % {\sl Sales Associate} \hfill August 2014 \\
   % Azmira Holistic Animal Care
   % \begin{itemize}
