Remove ad words stuff

--- a/webdev/webdev.tex
+++ b/webdev/webdev.tex
@@ -30,6 +30,13 @@
 \section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML5, CSS3, Javascript, Ruby, Postgres, MongoDB, Python, Matlab, Photoshop, Sketch {\sl Operating Systems:} Unix/Mac OSX. 
  
 \section{PROJECTS} \hfill October 2014 - present \\
+  {\sl Barter}|
+  https://github.com/smcfarlane/Barter
+  \begin{itemize}
+      \item Collaborative group project built with Ruby on Rails involving skill based bartering
+      \item Features map based location filtering, devise with omniauth, and an admin dashboard
+  \end{itemize}
+
   {\sl Adventure Game}|
   github.com/trodrigu/adventure\_game
   \begin{itemize}
@@ -48,7 +55,6 @@
   tommyr.me
   \begin{itemize}
       \item Static site with front end responsive design written in Jade, jQuery, Stylus
-      \item Deployed on netlify with CDN to ensure fast load times
   \end{itemize}
   %{\sl HomeWatch AZ Website} 
   %development.homewatch.divshot.io
@@ -85,18 +91,10 @@
 
 \section{EXPERIENCE} 
 
-  {\sl Web Content/Social Media Manager} \hfill August 2014 \\
-  Azmira Holistic Animal Care
-  \begin{itemize}
-      \item Increased Google Adwords Click Through Rate in 2 months from ~1\% to above 2\% and redesigned carefreepet.com eCommerce site in bootstrap
-      % \item Created Bark Buck coupon using Photoshop
-      % \item Restored newspaper clipping from 1986 using Photoshop
-      % \item Revamped hacshoppes.com website front end for better readability
-  \end{itemize}
   {\sl Graduate of MongoDB for Node.js Developers} \hfill May - July 2015 \\
   MongoDB Inc.
   \begin{itemize}
-      \item 7 week course involving MongoDB and CRUD, Schema Design, performance, the aggregation framework, and application engineering
+      \item Earned 85\% on 7 week course involving MongoDB and CRUD, Schema Design, performance, the aggregation framework, and application engineering
   \end{itemize}
   % {\sl Sales Associate} \hfill August 2014 \\
   % Azmira Holistic Animal Care
