--- a/webdev/webdev.tex
+++ b/webdev/webdev.tex
@@ -12,6 +12,7 @@
  \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 % address begins here
 % Again, the address lines must be centered over entire width of resume:
+ \moveleft.5\hoffset\centerline{trodriguez91@icloud.com}
  \moveleft.5\hoffset\centerline{14411 Elmport Lane}
  \moveleft.5\hoffset\centerline{Poway, CA 92064}
  \moveleft.5\hoffset\centerline{(619) 248-0717}
