remove gpa and score for mongodb course

--- a/webdev/webdev.tex
+++ b/webdev/webdev.tex
@@ -25,7 +25,7 @@
 \section{EDUCATION} 
   {\sl Learn SD,} Web Development Bootcamp \\
   May - August 2015 \\\\
-  {\sl Bachelor of Science,} Mechanical Engineering, GPA: 2.75 \\
+  {\sl Bachelor of Science,} Mechanical Engineering \\
   University of Arizona, Tucson, AZ, May 2013 \\
  
 \section{COMPUTER \\ SKILLS} {\sl Languages \& Software:} HTML5, CSS3, Javascript, Ruby, Postgres, MongoDB, Python, Matlab, Photoshop, Sketch {\sl Operating Systems:} Unix/Mac OSX. 
@@ -95,7 +95,7 @@
   {\sl Graduate of MongoDB for Node.js Developers} \hfill May - July 2015 \\
   MongoDB Inc.
   \begin{itemize}
-      \item Earned 85\% on 7 week course involving MongoDB and CRUD, Schema Design, performance, the aggregation framework, and application engineering
+      \item Completed 7 week course involving MongoDB and CRUD, Schema Design, performance, the aggregation framework, and application engineering
   \end{itemize}
   % {\sl Sales Associate} \hfill August 2014 \\
   % Azmira Holistic Animal Care
