update webdev resume

--- a/webdev/webdev.tex
+++ b/webdev/webdev.tex
@@ -20,7 +20,7 @@
 
 \begin{resume}
  
-\section{OBJECTIVE}  A position as a Full Time web developer. 
+%\section{OBJECTIVE}  A position as a Full Time web developer. 
  
 \section{EDUCATION} 
   {\sl Learn SD,} Web Development Bootcamp \\
@@ -49,7 +49,6 @@
   github.com/trodrigu/wild\_life\_tracker
   \begin{itemize}
       \item Rails app that tracks, stores and geolocates species
-      \item Packery, a bin packing algorithm for the grid
   \end{itemize}
 
   {\sl Code Blog}| 
@@ -69,57 +68,79 @@
       % \item Site at: development.homewatch.divshot.io
   %\end{itemize} 
 
-  {\sl Project Euler}|
-  github.com/trodrigu/projecteuler
-  \begin{itemize}
-    \item solved 1-11 and found greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in a 20 by 20 grid
-  \end{itemize}
+  %{\sl Project Euler}|
+  %github.com/trodrigu/projecteuler
+  %\begin{itemize}
+    %\item solved 1-11 and found greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in a 20 by 20 grid
+  %\end{itemize}
 
-  {\sl The Odin Project}|
-  github.com/trodrigu/odinproject 
-  \begin{itemize}
+  %{\sl The Odin Project}|
+  %github.com/trodrigu/odinproject 
+  %\begin{itemize}
       % \item Droid Logo in HTML/CSS
       % \item Google Search page using Jade/Stylus in roots static site compiler
-       \item Etch-a-sketch with jquery producing randomized colors on hover
+       %\item Etch-a-sketch with jquery producing randomized colors on hover
       % \item jQuery Slider with hover, next and previous functionality
-       \item TDD with rspec to make Temp Converter, Calculator, Simon Says, Book Title Corrector, and Timer String Display
+       %\item TDD with rspec to make Temp Converter, Calculator, Simon Says, Book Title Corrector, and Timer String Display
       % \item Sum of all multiples of 3 or 5 under 1000 solved by Ruby and Javascript
       % \item Sum of the even numbered values in the Fibonacci sequence up to 4E6 solved by Ruby and Javascript
       % \item Largest prime factor of 600851475143 Fermat's factorization method solved by Ruby and Javascript
       %\item Repository of projects including Google Search HTML/CSS, TDD with rSpec, jQuery, and the first three problems of Project Euler
       % \item Site at: trodrigu.github.io
-  \end{itemize} 
+  %\end{itemize} 
 
 \section{EXPERIENCE} 
 
-  {\sl Graduate of MongoDB for Node.js Developers} \hfill May - July 2015 \\
-  MongoDB Inc.
+   {\sl Parallel 6} \hfill Sep 2015 - Present \\
+   Junior Software Engineer
+   \begin{itemize}  \itemsep -2pt %reduce space between items
+     \item Developed platform messaging functionality for clinical trial app TAReSA
+     \item Enhanced platform segmenting functionality for recieving contents from platform
+   \end{itemize}
+
+  {\sl Front End Developer Intern} \hfill Aug 2015 \\
+  Mojopages
   \begin{itemize}
-      \item Completed 7 week course involving MongoDB and CRUD, Schema Design, performance, the aggregation framework, and application engineering
+      \item Developed portion of version 2 of Mojopages’ site
+      \item Initiated react testing framework
   \end{itemize}
-  % {\sl Sales Associate} \hfill August 2014 \\
-  % Azmira Holistic Animal Care
-  % \begin{itemize}
-  %     \item Learned and applied the 8 week intensive curriculum of the Holistic Animal lifestyle to solve an assortment of customer issues
-  %     \item Carried transactions via Intuit Quickbooks
-  %     \item Performed store opening and closing routines
-  %     \item Participated in store inventory management
-  %     \item Employee of the year 2014
-  % \end{itemize} 
 
-  % {\sl Teacher's Assistant} \hfill July 2014 \\
-  % Black Rocket Technology Camp, University of Arizona
-  % \begin{itemize}  \itemsep -2pt %reduce space between items
-  %   \item Educated kids between the ages of 8 - 12 on the benefits of pursuing a career in Technology and Science
-  %   \item Taught the basics of Stop Motion, 3D Computer Aided Design, Digital Comic Book Composition
-  % \end{itemize}
+  {\sl LEARN Academy Web Development Bootcamp} \hfill May - July 2015 \\
+  LEARNSD
+  \begin{itemize}
+      \item Completed 4 month intensive bootcamp creating projects including Ruby, Javascript, SQL, and HTML5
+      \item Pair Programmed with class mates to solve algorithmic problems
+  \end{itemize}
 
-  % {\sl Tier 1 IOS Tech Support} \hfill July 2013 - January 2014 \\
-  % Apple Computers 
-  % \begin{itemize}  \itemsep -2pt %reduce space between items
-  %   \item Utilized Apple developed PAIR technique to quickly achieve solutions to customer problems
-  %   \item Educated customers in maximizing the efficiency of their IOS devices
-  % \end{itemize}
+  %{\sl Graduate of MongoDB for Node.js Developers} \hfill May - July 2015 \\
+  %MongoDB Inc.
+  %\begin{itemize}
+      %\item Completed 7 week course involving MongoDB and CRUD, Schema Design, performance, the aggregation framework, and application engineering
+  %\end{itemize}
+
+  %{\sl Sales Associate} \hfill August 2014 - May 2015 \\
+  %Azmira Holistic Animal Care
+  %\begin{itemize}
+      %\item Learned and applied the 8 week intensive curriculum of the Holistic Animal lifestyle to solve an assortment of customer issues
+      %\item Carried transactions via Intuit Quickbooks
+      %\item Performed store opening and closing routines
+      %\item Participated in store inventory management
+      %\item Employee of the year 2014
+  %\end{itemize} 
+
+   %{\sl Teacher's Assistant} \hfill July 2014 \\
+   %Black Rocket Technology Camp, University of Arizona
+   %\begin{itemize}  \itemsep -2pt %reduce space between items
+     %\item Educated kids between the ages of 8 - 12 on the benefits of pursuing a career in Technology and Science
+     %\item Taught the basics of Stop Motion, 3D Computer Aided Design, Digital Comic Book Composition
+   %\end{itemize}
+
+   %{\sl Tier 1 IOS Tech Support} \hfill July 2013 - January 2014 \\
+   %Apple Computers 
+   %\begin{itemize}  \itemsep -2pt %reduce space between items
+     %\item Utilized Apple developed PAIR technique to quickly achieve solutions to customer problems
+     %\item Educated customers in maximizing the efficiency of their IOS devices
+   %\end{itemize}
 
   % {\sl Midshipman} \hfill October 2009 - February 2012 \\
   % United States Navy
@@ -131,7 +152,3 @@
 
 \end{resume}
 \end{document}
-
-
-
-
